[package]
name = "fff-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fff"
path = "src/main.rs"

[dependencies]
fff-search = "0.6.4"
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
unicode-width = "0.2"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "dump-load", "regex-fancy"] }
